--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,12 +1,1 @@
-// Place all the styles related to the Portfolios controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
-body {
-  background-color: palevioletred;
-  color: teal;
-}
-
-.top a {
-  color: rgb(172, 16, 16);
-}
+@import "bootstrap";
