--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "1111111111" %></p>
+<h1 class="cover-heading">Wanna know more about me? Find me at</h1>
+<hr>
+<div class="row">
+  <div class="col-md-6">
+    <h4>Github</h4>
+    <p><a href="https://github.com/jenipharachel">jenipharachel</a></p>
+  </div>
+  <div class="col-md-6">
+    <h4>Linked In</h4>
+    <p><a href="https://www.linkedin.com/in/jenipha-rachel-26b23451">jenipha-rachel</a></p>
+  </div>
+  <div class="col-md-12">
+    <h4>Twitter</h4>
+    <p><a href="https://twitter.com/jenipharachel">@jenipharachel</a></p>
+  </div>
+</div>
+
