--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,24 +15,19 @@
   </head>
 
   <body>
-  <div class="site-wrapper">
-    <div class="site-wrapper-inner">
-      <div class="cover-container">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
-        <%= render "shared/application_nav" %>
+      <%= render "shared/application_nav" %>
     
-        <%= yield %>
+      <%= yield %>
 
-        <div class="mastfoot">
-          <div class="inner">
-            <%= copyright_generator %>
-          </div>
+      <footer class="mastfoot mx-auto">
+        <div class="inner">
+          <%= copyright_generator %>
         </div>
+      </footer>
 
-        <%= source_helper("application") %>
-
-      </div>
-    </div>
+      <%= source_helper("application") %>
   </div>
     
   </body>
