--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,7 +1,7 @@
-<div class="masthead clearfix">
+<header class="masthead mb-auto">
   <div class="inner">
     <h3 class="masthead-brand">Jenipha Rachel</h3>
-    <nav class="nav nav-masthead">
+    <nav class="nav nav-masthead justify-content-center">
       <%= link_to "Home", root_path, class: 'nav-link' %>
       <%= link_to "About Me", about_me_path, class: 'nav-link' %>
       <%= link_to "Contact", contact_path, class: 'nav-link' %>
@@ -10,4 +10,4 @@
       <%= login_helper 'nav-link' %>
     </nav>
   </div>
-</div>
+</header>
