--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<h1 class="cover-heading">Hey, there</h1>
-<p class="lead">I am a junior Mobile app developer figuring out her place in Software Development. I am currently learning how data is stored and managed in the Backend through Ruby on Rails(exciting). I enjoy finding solutions for real-life problems and love a good english series</p>
-<p class="lead"> Recommend me your favorite in the comments section</p>
+<main role="main" class="inner cover">
+  <h1 class="cover-heading">Hey, there</h1>
+  <p class="lead">I am a junior Mobile app developer figuring out her place in Software Development. I am currently learning how data is stored and managed in the Backend through Ruby on Rails(exciting). I enjoy finding solutions for real-life problems and love a good english series</p>
+  <p class="lead"> Recommend me your favorite in the comments section</p>
+</main>
