--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
-<div class="inner cover">
+<main role="main" class="inner cover">
   <h1 class="cover-heading">Dreams come true</h1>
   <p class="lead">The future belongs to those who believe in the beauty of their dreams.</p>
   <p class="lead">
     <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary" %>
   </p>
-</div>
+</main>
