--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -23,13 +23,9 @@
             <%# <a class="text-muted" href="#">Subscribe</a> %>
           </div>
           <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="#">Large</a>
+            <a class="blog-header-logo text-dark" href="#">My Blog</a>
           </div>
           <div class="col-4 d-flex justify-content-end align-items-center">
-            <%# <a class="text-muted" href="#" aria-label="Search">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
-            </a> %>
-            <%# <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a> %>
             <%= login_helper "btn btn-sm btn-outline-secondary ml-5" %>
           </div>
         </div>
@@ -84,21 +80,20 @@
         </aside>
         <!-- /.blog-sidebar -->
         <%# sidebar ends %>
-
-        <footer class="blog-footer">
-          <p>
-            Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by
-            <a href="https://twitter.com/mdo">@mdo</a>.
-          </p>
-          <p>
-            <a href="#">Back to top</a>
-          </p>
-        </footer>
-
-        <%= render "shared/nav", location: "bottom" %>
-
-        <%= source_helper("blog") %>
+        
       </div>
+
+      <footer class="blog-footer">
+        <p>
+          Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by
+          <a href="https://twitter.com/mdo">@mdo</a>.
+        </p>
+        <p>
+          <a href="#">Back to top</a>
+        </p>
+      </footer>
+
+      <%= source_helper("blog") %>
     </main>
   </body>
 </html>
