--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -38,7 +38,12 @@
 
     <main role="main" class="container">
       <div class="row">
+        <div class="col-md-8 blog-main">
+  <h3 class="pb-4 mb-4 font-italic border-bottom">
+    <%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
+  </h3>
         <%= yield %>
+        </div>
 
         <%# sidebar starts %>
         <aside class="col-md-4 blog-sidebar">
