--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <%# header starts %>
       <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
