--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 /* stylelint-disable selector-list-comma-newline-after */
 
@@ -114,4 +115,8 @@ h6 {
 }
 .blog-footer p:last-child {
   margin-bottom: 0;
+}
+
+.social-links li {
+  font-size: 2em;
 }
