Added app logos in contact page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,15 +3,15 @@
   <hr>
   <div class="row">
     <div class="col-md-6">
-      <h4>Github</h4>
+      <h4><%= fa_icon "github" %> Github</h4>
       <p><a href="https://github.com/jenipharachel">jenipharachel</a></p>
     </div>
     <div class="col-md-6">
-      <h4>Linked In</h4>
+      <h4><%= fa_icon "linkedin" %> Linked In</h4>
       <p><a href="https://www.linkedin.com/in/jenipha-rachel-26b23451">jenipha-rachel</a></p>
     </div>
     <div class="col-md-12">
-      <h4>Twitter</h4>
+      <h4><%= fa_icon "twitter" %> Twitter</h4>
       <p><a href="https://twitter.com/jenipharachel">@jenipharachel</a></p>
     </div>
   </div>
