Updated about me section

--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -2,8 +2,9 @@
   <div class="p-4 mb-3 bg-light rounded">
     <h4 class="font-italic">About</h4>
     <p class="mb-0">
-      I am a <em>junior Mobile app Developer</em> enthusiastic about learning something new. 
-      I love to sing but if you wanna hear it, you gotta take me to the New York Times Square.
+      I am a <em>junior Mobile app Developer</em> enthusiastic about learning 
+      something new. I love to sing but if you wanna hear me, you have to take me to 
+      the New York Times Square first.
     </p>
   </div>
 
