--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,12 @@
 <main role="main" class="inner cover">
   <h1 class="cover-heading">Hey, there!</h1>
-  <p class="lead">I am a junior Mobile app developer figuring out her place in Software Development. I am currently learning how data is stored and managed in the Backend through Ruby on Rails(exciting). I enjoy finding solutions for real-life problems and love a good binge watch.</p>
-  <p class="lead"> Suggest me your favorite in the comments section.</p>
+  <div class="row">
+    <div class="col-md-4">
+      <%= image_tag "profile_pic.jpeg", width: 250, alt: "Profile image" %>
+    </div>
+    <div class="col-md-8">
+      <p class="lead">I am a junior Mobile app developer figuring out her place in Software Development. I am currently learning how data is stored and managed in the Backend through Ruby on Rails(exciting). I enjoy finding solutions for real-life problems and love a good binge watch.</p>
+      <p class="lead"> Suggest me your favorite in the comments section.</p>
+    </div>
+  </div>
 </main>
