Refactored alerts in helper methods

--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <%= render "shared/blog_footer" %>
-
+      <%= alerts %>
       <%= source_helper("blog") %>
     </main>
   </body>
