--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -108,6 +108,7 @@ h6 {
  * Footer
  */
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -124,4 +125,20 @@ h6 {
 
 .social-links li {
   font-size: 2em;
+}
+
+.comment-card > .card {
+  margin-top: 15px;
+  padding: 15px;
+}
+
+.comment-name {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.comment-time {
+  font-style: italic;
+  font-size: 0.8rem;
+  color: rgb(105, 98, 98);
 }
