--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,10 +2,21 @@
   <div class="card">
     <div class="card-block">
       <div class="row">
-        <div class="col-md-1">
+        <div class="col-md-2 pr-0">
+          <%= gravatar_helper comment.user %>
         </div>
-        <div class="col-md-11">
-          <%= comment.content %>
+        <div class="col-md-10 pl-0">
+          <div class="row">
+            <div class="col-md-8 comment-name">
+              <%= comment.user.name %>
+            </div>
+            <div class="col-md-4 comment-time">
+              Posted <%= distance_of_time_in_words(comment.created_at, Time.now) %> ago
+            </div>
+          </div>
+          <div>
+            <%= comment.content %>
+          </div>
         </div>
       </div>
     </div>
