--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -15,7 +15,18 @@
 
   <div class="form-group">
     <%= form.label :topic %>
-    <%= form.select :topic_id, options_from_collection_for_select(Topic.all, 'id', 'title', @blog.topic_id),{}, {class: "form-control"} %>
+    <%= form.collection_select(:topic_id, Topic.all, :id, :title, 
+                                {
+                                  selected: blog.topic.id,
+                                  include_blank: true
+                                },
+                                class: 'form-control'
+                                ) 
+    %> 
+    <!-- <%= form.select :topic_id, options_from_collection_for_select(Topic.all, 'id', 
+                                                                  'title', @blog.topic_id),
+                                                                  {}, {class: "form-control"}
+    %> -->
   </div>
 
   <div class="form-group">
